--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "index.js": "^0.0.3",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.4.1",
     "nodemon": "^3.1.3"
   }
